# rust-auth-server

./: .env  .gitignore  Cargo.toml  DEPLOYMENT_STATUS.md  Dockerfile  README.md  deploy-to-github.sh  main  main.rs  main.ts
.github/workflows/: ci.yml
src/: auth.rs  config.rs  database.rs  handlers.rs  lib.rs  middleware.rs  models.rs  services.rs
